[metadata]
name = corcli
version = 0.0.7
author = 0xFustang
author_email = 0xFustang@proton.me
description = A simple CLI client for Cortex
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0xFustang/corcli

[options]
packages=find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    cortex4py
    inquirer
    requests
    toml

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    corcli = corcli.__main__:main
