[metadata]
name = corcli
version = 1.0.1-dev0
author = 0xFustang
author_email = 0xFustang@proton.me
description = A simple CLI client for Cortex
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/0xFustang/corcli

[options]
packages=find:
package_dir =
    = src
python_requires = >=3.9
install_requires =
    inquirer==3.1.3
    cortex4py==2.1.0
    colorama==0.4.6
    toml==0.10.2

[options.packages.find]
where=src

[options.entry_points]
console_scripts =
    corcli = corcli.__main__:main
